--- a/Docs/20250529/jucs2e.sty
+++ b/Docs/20250529/jucs2e.sty
@@ -489,7 +489,7 @@ style.\vskip0.5cm}
       \@subtitle \par \vskip 4ex}\fi
     
     \if!\@date!\else
-      {\vskip 1ex \normalsize \@date \par\vskip 2ex}
+      { \normalsize \@date \par\vskip 2ex}
     \fi
     \authornames
   \end{center}%
