최종 보고서 1차 완료

--- a/Docs/20250529_A_Prototype_of_Live_Mobile_Learning_System_Using_RTMP_and_STOMP/A_Prototype_of_Live_Mobile_Learning_System_Using_RTMP_and_STOMP.tex
+++ b/Docs/20250529_A_Prototype_of_Live_Mobile_Learning_System_Using_RTMP_and_STOMP/A_Prototype_of_Live_Mobile_Learning_System_Using_RTMP_and_STOMP.tex
@@ -103,7 +103,7 @@
 %%  \sfx{IV}}\email{iauthor@gmail.com}
 %%=============================================================%%
 
-\author*{\fnm{Hosung} \sur{Kim}}\email{hosungkim5108@gmail.com}
+\author{\fnm{Hosung} \sur{Kim}}\email{hosungkim5108@gmail.com}
 
 %%\author[2,3]{\fnm{Second} \sur{Author}}\email{iiauthor@gmail.com}
 %%\equalcont{These authors contributed equally to this work.}
