--- a/Docs/20250716_Live_Mobile_Learning_System_with_Multi-Room_and_Whiteboard_Features/Live_Mobile_Learning_System_with_Multi-Room_and_Whiteboard_Features.tex
+++ b/Docs/20250716_Live_Mobile_Learning_System_with_Multi-Room_and_Whiteboard_Features/Live_Mobile_Learning_System_with_Multi-Room_and_Whiteboard_Features.tex
@@ -103,7 +103,7 @@
 %%  \sfx{IV}}\email{iauthor@gmail.com}
 %%=============================================================%%
 
-\author*{\fnm{Hosung} \sur{Kim}}\email{hosungkim5108@gmail.com}
+\author{\fnm{Hosung} \sur{Kim}}\email{hosungkim5108@gmail.com}
 
 %%\author[2,3]{\fnm{Second} \sur{Author}}\email{iiauthor@gmail.com}
 %%\equalcont{These authors contributed equally to this work.}
