--- a/Docs/20250804_User-Adjustable_UI_for_Concurrent_PDF_and_Whiteboard_Display_in_Live_Mobile_Learning_System/User-Adjustable_UI_for_Concurrent_PDF_and_Whiteboard_Display_in_Live_Mobile_Learning_System.tex
+++ b/Docs/20250804_User-Adjustable_UI_for_Concurrent_PDF_and_Whiteboard_Display_in_Live_Mobile_Learning_System/User-Adjustable_UI_for_Concurrent_PDF_and_Whiteboard_Display_in_Live_Mobile_Learning_System.tex
@@ -103,7 +103,7 @@
 %%  \sfx{IV}}\email{iauthor@gmail.com}
 %%=============================================================%%
 
-\author*{\fnm{Hosung} \sur{Kim}}\email{hosungkim5108@gmail.com}
+\author{\fnm{Hosung} \sur{Kim}}\email{hosungkim5108@gmail.com}
 
 %%\author[2,3]{\fnm{Second} \sur{Author}}\email{iiauthor@gmail.com}
 %%\equalcont{These authors contributed equally to this work.}
