보고서 사소한 것 수정

--- a/Docs/20250808_Live_Mobile_Learning_System_with_User-Adjustable_UI/Live_Mobile_Learning_System_with_User-Adjustable_UI.tex
+++ b/Docs/20250808_Live_Mobile_Learning_System_with_User-Adjustable_UI/Live_Mobile_Learning_System_with_User-Adjustable_UI.tex
@@ -229,7 +229,7 @@ PDF 강의 슬라이드는 Apple Framework인 PDFKit\cite{PDFKit}의 \verb+PDFVi
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\textwidth]{UserInterfaceWithAnExpandedDocumentArea.png}
-\caption{User interface with an expanded document area}\label{fig7}
+\caption{User interface with an expanded lecture slide area}\label{fig7}
 \end{figure}
 
 \begin{figure}[H]
